# r-unner

./: .dockerignore  .gitignore  CONTEXT.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: __main__.py  config.py  registry.py  runner.py
app/utils/: config.py  environment.py  logger.py
docs/adr/: 0001-rocker-as-base-image.md  0002-subprocess-invocation-over-rpy2.md
model/: simulate.R
src/runner/: __main__.py  config.py  registry.py  runner.py
tests/: conftest.py  test_config.py  test_logger.py  test_main.py  test_runner.py
tests/utils/: test_config.py  test_environment.py
