[project]
name = "r-unner"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings~=2.14.1",
    "memray~=1.19.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyrefly]
project-includes = [
    "app/**/*.py",
    "tests/**/*.py",
]
